--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
+						<h3>YouTube Infinite Search</a></h3>
+						<p>
+							YouTube Search App that keeps fetching search results until you get tired scrolling.<br />
+							<a class="btn" href="https://github.com/vishwasnavadak/youtube-search" target="_blank"
+								rel="noreferrer noopener" title="Github Repository">Github</a>
+						</p>
+					</div>
+					<div class="col-sm-6">
 						<h3>Twitter Sentiment Analyzer</a></h3>
 						<p>
 							Web application that fetches top tweets from twitter based on the search query
@@ -137,21 +145,12 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<h3>YouTube Infinite Search</a></h3>
-						<p>
-							YouTube Search App that keeps fetching search results until you get tired scrolling.<br />
-							<a class="btn" href="https://github.com/vishwasnavadak/youtube-search" target="_blank"
-								rel="noreferrer noopener" title="Github Repository">Github</a>
-						</p>
-					</div>
-					<div class="col-sm-6">
 						<h3>Workshop and Conference Management System</h3>
 						<p>
-							A web portal connecting all the departments of the college and Accounts section in which
+							A web portal connecting all the departments of the college in which
 							staff enter the
-							details of the workshop and conferences that they have conducted or attended and upload the
-							relevant
-							documents for efficient bookkeeping. Currently being used by NMAM Institute of Technology,
+							details of the workshop and conferences that they have conducted or attended for efficient
+							bookkeeping. Currently being used by NMAM Institute of Technology,
 							Nitte.
 						</p>
 					</div>
