hopefully final major change for v2

--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
     <meta name="msapplication-TileColor" content="#161616">
     <meta name="theme-color" content="#161616" />
     <meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
-    <meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
-    					pictures">
+    <meta name="description" itemprop="description"
+      content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good pictures">
     <meta name="keywords" itemprop="keywords"
       content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, portfolio, webception, web developer" />
     <!-- Open Graph Meta Tags -->
@@ -35,8 +35,6 @@
   </head>
 
   <body id="body">
-
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -64,12 +62,9 @@
     <section class="section-404">
       <h1><i class="fa fa-meh-o fa-4x"></i></h1>
       <p><strong>Whoopsie !</strong></p>
-      <p>I might have forgotten to add the page you are trying to access. Sorry.</p>
+      <p>I have not added the page you are trying to access. Sorry.</p>
       <p>Try going back home maybe?</p>
     </section>
-
-
-    <!-- Footer -->
     <footer>
       <div class="social-icons-white">
         <a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener" title="Twitter"
@@ -95,7 +90,6 @@
       </div><br />
       <p> &copy; 2017-<span id="cur-year"></span> Vishwasa Navada K. </p>
     </footer>
-
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51455888-6"></script>
