--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 	<head>
 		<title>Vishwasa Navada K</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="msapplication-TileColor" content="#161616">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#161616" />
 		<meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
 		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
@@ -36,7 +35,6 @@
 	</head>
 
 	<body id="body">
-		<!-- Navigation -->
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
 				data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -60,7 +58,6 @@
 				</ul>
 				</ul>
 			</div>
-
 		</nav>
 		<div>
 			<section class="landing-section" id="landing">
@@ -99,17 +96,18 @@
 				<h2>ABOUT</h2>
 				<hr class="separator" />
 				<p>I am a software developer currently working on JavaScript and Tableau. I like learning and
-					experimenting with new technologies as they come. I try to build things that save me from manual
-					efforts. I am an open-source enthusiast and a dark mode everything person. I occasionally write on
-					my blog about new technologies, coding, how-tos, travel etc. </p>
+					experimenting with new technologies as they come. I try to build things that will save me from
+					manual work. I am an open-source enthusiast and a dark mode everything person. I occasionally write
+					on my blog about new technologies, coding, how-tos, travel etc. </p>
 				<br />
 				<h3>Tech I love to work with</h3>
 				<p>JavaScript (React, NodeJS), Python, Serverless, AWS. </p>
 				<br />
 				<h3>Besides Tech</h3>
 				<p>
-					I am a cinephile with love towards Sci-Fi, Murder Mystery and Heist movies. I sometimes
-					pointlessly binge-watch magic shows on YouTube. I also love traveling and photography (Yes, the
+					I am a cinephile with love towards Sci-Fi, Mystery and Heist movies. I sometimes
+					pointlessly binge-watch magic shows on YouTube. I also love animals (<span class="fa fa
+												fa-paw"></span>), traveling and photography (Yes, the
 					background image you see above is a self-timed shot of me).
 				</p>
 				<br />
@@ -169,7 +167,7 @@
 
 			</section>
 			<footer>
-				<p> &copy; 2017-<span id="cur-year"></span> Vishwasa Navada K. </p>
+				&copy; 2017-<span id="cur-year"></span> Vishwasa Navada K.
 			</footer>
 		</div>
 
