--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, portfolio, webception, web developer" />
 		<!-- Open Graph Meta Tags -->
 		<meta name="og:title" content="Vishwasa Navada K" />
-		<meta name="og:description" content="My portfolio page!" />
+		<meta name="og:description"
+			content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good pictures" />
 		<meta name="og:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 		<meta name="og:url" content="https://vishwas.tech/" />
 		<meta name="og:site_name" content="Vishwasa Navada K" />
@@ -22,7 +23,8 @@
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@vishwasnavadak" />
 		<meta name="twitter:title" content="Vishwasa Navada K" />
-		<meta name="twitter:description" content="My portfolio page!" />
+		<meta name="twitter:description"
+			content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good pictures" />
 		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
