adding resume link

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 						href="mailto:hi@vishwas.tech?subject=Want%20to%20talk%20about&body=Hi%20Vishwasa,%0D%0A%0D%0AThanks%20and%20Regards,%0D%0A"
 						target="_blank" rel="noreferrer noopener" title="Send email">hi@vishwas.tech</a>
 				</p>
+				<a class="btn" href="/resume/" target="_blank" rel="noreferrer noopener" title="Resume">Resume</a>
 
 			</section>
 
