change SEO desc

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#161616" />
 		<meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
-		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
-					pictures">
+		<meta name="description" itemprop="description"
+			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source.">
 		<meta name="keywords" itemprop="keywords"
 			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, portfolio, webception, web developer" />
 		<!-- Open Graph Meta Tags -->
 		<meta name="og:title" content="Vishwasa Navada K" />
 		<meta name="og:description"
-			content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good pictures" />
+			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source." />
 		<meta name="og:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 		<meta name="og:url" content="https://vishwas.tech/" />
 		<meta name="og:site_name" content="Vishwasa Navada K" />
@@ -24,7 +24,7 @@
 		<meta name="twitter:site" content="@vishwasnavadak" />
 		<meta name="twitter:title" content="Vishwasa Navada K" />
 		<meta name="twitter:description"
-			content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good pictures" />
+			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source." />
 		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
