adding one more project

--- a/index.html
+++ b/index.html
@@ -167,7 +167,20 @@
 						</p>
 					</div>
 				</div>
-
+				<div class="row">
+					<div class="col-sm-12">
+						<h3>Resume Generator using Markdown</h3>
+						<h4>(React, MDX-loader, HTML, CSS)</h4>
+						<p>
+							React App that takes resume written in Markdown and generates the styled print-ready resume
+							page. Includes minimal
+							theming, icons and custom page breaks for printed copy. Can easily be deployed as github
+							page or to Netlify.<br />
+							<a class="btn" href="https://github.com/vishwasnavadak/resume" target="_blank"
+								rel="noreferrer noopener" title="Github Repository">Github</a>
+						</p>
+					</div>
+				</div>
 			</section>
 			<footer>
 				&copy; 2017-<span id="cur-year"></span> Vishwasa Navada K.
