--- a/index.html
+++ b/index.html
@@ -186,21 +186,15 @@
 				&copy; 2017-<span id="cur-year"></span> Vishwasa Navada K.
 			</footer>
 		</div>
-
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-51455888-6"></script>
+		<script defer async src="https://www.googletagmanager.com/gtag/js?id=UA-51455888-6"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() { dataLayer.push(arguments); }
 			gtag('js', new Date());
 			gtag('config', 'UA-51455888-6');
 		</script>
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-			integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
-			crossorigin="anonymous"></script>
-		<script src="/assets/scripts.js"></script>
+		<script defer src="/assets/scripts.js"></script>
 	</body>
 
 </html>
