--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 		<meta name="description" itemprop="description"
 			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source.">
 		<meta name="keywords" itemprop="keywords"
-			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, portfolio, webception, web developer" />
+			content="vishwasa navada k, vishwasnavadak, vishwas github page, vishwasa blog, vishwas.tech, portfolio, webception, web developer, tech blog, JavaScript, react, serverless" />
 		<!-- Open Graph Meta Tags -->
 		<meta name="og:title" content="Vishwasa Navada K" />
 		<meta name="og:description"
 			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source." />
-		<meta name="og:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
+		<meta name="og:image" content="https://vishwas.tech/assets/img/bg.jpeg" />
 		<meta name="og:url" content="https://vishwas.tech/" />
 		<meta name="og:site_name" content="Vishwasa Navada K" />
 		<meta name="og:type" content="website" />
 		<!-- Twitter Card Meta Tags -->
-		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@vishwasnavadak" />
 		<meta name="twitter:title" content="Vishwasa Navada K" />
 		<meta name="twitter:description"
 			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source." />
-		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
+		<meta name="twitter:image" content="https://vishwas.tech/assets/img/bg.jpeg" />
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
