--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 			<section id="about">
 				<h2>ABOUT</h2>
 				<hr class="separator" />
-				<p>I am a software developer currently working on JavaScript and Tableau. I like learning and
+				<p>I am a software developer currently working on JavaScript and Serverless at <a
+						href="https://antstack.io" target="_blank" rel="noreferrer noopener"
+						title="Antstack Technologies" aria-label="Antstack Technologies">Antstack</a>. I like learning
+					and
 					experimenting with new technologies as they come. I try to build things that will save me from
 					manual work. I am an open-source enthusiast and a dark mode everything person. I occasionally write
 					on my blog about new technologies, coding, how-tos, travel etc. </p>
