change on to with

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<section id="about">
 				<h2>ABOUT</h2>
 				<hr class="separator" />
-				<p>I am a software developer currently working on JavaScript and Serverless at <a
+				<p>I am a software developer currently working with JavaScript and Serverless at <a
 						href="https://antstack.io" target="_blank" rel="noreferrer noopener"
 						title="Antstack Technologies" aria-label="Antstack Technologies">Antstack</a>. I like learning
 					and
