add schema org spec for person

--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
 		<meta name="twitter:description"
 			content="Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source." />
 		<meta name="twitter:image" content="https://vishwas.tech/assets/img/bg.jpeg" />
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org/",
+			"@type": "Person",
+			"name": "Vishwasa Navada K",
+			"description": "Vishwasa is a software developer and blogger with interests in Frontend Development, Serverless and Open Source.",
+			"url": "http://vishwas.tech/",
+			"image": "https://vishwas.tech/assets/img/vishwasnavadak_photo.jpg",
+			"sameAs": [
+			"https://twitter.com/vishwasnavadak",
+			"https://www.youtube.com/c/VishwasNavada",
+			"https://linkedin.com/in/vishwasnavadak",
+			"https://github.com/vishwasnavadak/",
+			"http://vishwas.tech/"
+			],
+			"jobTitle": "Software Developer",
+			"worksFor": {
+			"@type": "Organization",
+			"name": "Antstack Technologies"
+			}  
+		}
+		</script>
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
