--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 						<a class="nav-link" href="/blog/">Blog</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/blog/photos" target="_blank" rel="noreferrer noopener">Photos</a>
+						<a class="nav-link" href="/go/#photos" target="_blank" rel="noreferrer noopener">Photos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/blog/videos" target="_blank" rel="noreferrer noopener">Videos</a>
+						<a class="nav-link" href="/go/#videos" target="_blank" rel="noreferrer noopener">Videos</a>
 					</li>
 				</ul>
 				</ul>
@@ -89,24 +89,24 @@
 					<h1> &gt; Vishwasa Navada K <span class="blinking-cursor">_</span></h1>
 					<h2>Geek. Ambivert. Wanderlust.</h2>
 					<div class="social-icons">
-						<a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener"
-							title="Twitter" aria-label="Twitter Profile">
+						<a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener" title="Twitter"
+							aria-label="Twitter Profile">
 							<span class="fa fa-twitter fa-2x"></span>
 						</a>
 						<a href="https://www.reddit.com/user/vishwasnavadak" target="_blank" rel="noreferrer noopener"
 							title="Reddit" aria-label="Reddit Profile">
 							<span class="fa fa-reddit-alien fa-2x"></span>
 						</a>
-						<a href="https://linkedin.com/in/vishwasnavadak" target="_blank" rel="noreferrer noopener"
-							title="LinkedIn" aria-label="Linkedin Profile">
+						<a href="https://linkedin.com/in/vishwasnavadak" target="_blank" rel="noreferrer noopener" title="LinkedIn"
+							aria-label="Linkedin Profile">
 							<span class="fa fa-linkedin fa-2x"></span>
 						</a>
-						<a href="https://github.com/vishwasnavadak/" target="_blank" rel="noreferrer noopener"
-							title="Github" aria-label="Github Profile">
+						<a href="https://github.com/vishwasnavadak/" target="_blank" rel="noreferrer noopener" title="Github"
+							aria-label="Github Profile">
 							<span class="fa fa-github-alt fa-2x"></span>
 						</a>
-						<a href="https://stackoverflow.com/users/story/2526327" target="_blank"
-							rel="noreferrer noopener" title="Stackoverflow" aria-label="Stackoverflow Profile">
+						<a href="https://stackoverflow.com/users/story/2526327" target="_blank" rel="noreferrer noopener"
+							title="Stackoverflow" aria-label="Stackoverflow Profile">
 							<span class="fa fa-stack-overflow fa-2x"></span>
 						</a>
 					</div>
@@ -117,9 +117,9 @@
 			<section id="about">
 				<h2>ABOUT</h2>
 				<hr class="separator" />
-				<p>I am a software developer currently working with JavaScript and Serverless at <a
-						href="https://antstack.io" target="_blank" rel="noreferrer noopener"
-						title="Antstack Technologies" aria-label="Antstack Technologies">Antstack</a>. I like learning
+				<p>I am a software developer currently working with JavaScript and Serverless at <a href="https://antstack.io"
+						target="_blank" rel="noreferrer noopener" title="Antstack Technologies"
+						aria-label="Antstack Technologies">Antstack</a>. I like learning
 					and
 					experimenting with new technologies as they come. I try to build things that will save me from
 					manual work. I am an open-source enthusiast and a dark mode everything person. I occasionally write
@@ -163,8 +163,8 @@
 						<p>
 							Terminal based chat application built using Go which enables communication between
 							computers within the local network. <br />
-							<a class="btn" href="https://github.com/GOOFS/go-goof-Talk" target="_blank"
-								rel="noreferrer noopener" title="Github Repository">Github</a>
+							<a class="btn" href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener"
+								title="Github Repository">Github</a>
 						</p>
 					</div>
 				</div>
@@ -185,8 +185,8 @@
 						<p>
 							A web application that fetches top tweets from twitter based on the search query
 							(hashtag/username) and categorizes them into positive, negative and neutral tweets.<br />
-							<a class="btn" href="https://github.com/vishwasnavadak/tweet-sentiment-analyzer"
-								target="_blank" rel="noreferrer noopener" title="Github Repository">Github</a>
+							<a class="btn" href="https://github.com/vishwasnavadak/tweet-sentiment-analyzer" target="_blank"
+								rel="noreferrer noopener" title="Github Repository">Github</a>
 						</p>
 					</div>
 				</div>
@@ -199,8 +199,8 @@
 							page. Includes minimal
 							theming, icons and custom page breaks for printed copy. Can easily be deployed as github
 							page or to Netlify.<br />
-							<a class="btn" href="https://github.com/vishwasnavadak/resume" target="_blank"
-								rel="noreferrer noopener" title="Github Repository">Github</a>
+							<a class="btn" href="https://github.com/vishwasnavadak/resume" target="_blank" rel="noreferrer noopener"
+								title="Github Repository">Github</a>
 						</p>
 					</div>
 				</div>
