--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/go/#videos" target="_blank" rel="noreferrer noopener">Videos</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/uses/">Uses</a>
+					</li>
 				</ul>
 				</ul>
 			</div>
