add gist link to uses page

--- a/uses/index.html
+++ b/uses/index.html
@@ -106,7 +106,9 @@
 					<li><strong>Code Editor </strong> - VS Code with One Dark Pro Monokai theme and Prettier, ESLint, Gitlens,
 						Turbo Console Log, ReactJS Code Snippets, Comment Anchors,
 						Polacode & Settings Sync</li>
-					<li><strong>Terminal </strong> - iTerm2 with oh-my-zsh, homebrew & lot of custom aliases</li>
+					<li><strong>Terminal </strong> - iTerm2 with oh-my-zsh, homebrew & <a
+							href="https://gist.github.com/vishwasnavadak/e922d8f1ee429f529677e8e8f053a58a" target="_blank"
+							rel="noreferrer noopener">lot of custom aliases</a></li>
 					<li><strong>Illustration and Design </strong> - Figma, Adobe XD & photopea.com (Browser based free Photoshop
 						alternative) </li>
 					<li>Postman</li>
