--- a/uses/index.html
+++ b/uses/index.html
@@ -97,7 +97,7 @@
 					<li><span aria-label="laptop-emoji">💻</span> 13" MacBook Air 2017</li>
 					<li><span aria-label="computer-emoji">🖥</span> Dell P Series 24-inch Monitor</li>
 					<li><span aria-label="headphone-emoji">🎧</span> Boat Rockerz 400 Headphone</li>
-					<li><span aria-label="phone-emoji">📱</span> Redmi Note 4 / Iphone 6s</li>
+					<li><span aria-label="phone-emoji">📱</span>Poco X2</li>
 					<li><span aria-label="harddisk-emoji">💽</span> Toshiba 1TB External Hard disk</li>
 				</ul>
 				<h2>Softwares</h2>
